--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,29 @@
 
     .mobile-wallet-container {
         display: block;
-        margin-top: 100px;
-        margin-bottom: -50px;
+        margin-bottom: 30px;
     }
+
+    .tokenomics {
+        flex-direction: column;
+    }
+}
+
+.banner {
+    position: absolute;
+    left: 0px;
+    top: 100px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -22;
+    background: url('/assets/images/backgroup/bg_geb.jpg');
+    background-repeat: no-repeat;
+    background-position: center, center;
+    background-size: cover;
+}
+
+.tokenomics {
+    display: flex;
+    justify-content: center;
 }
